# avr

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
cmake/: helpers.cmake  toolchain.cmake
src/: CMakeLists.txt
src/atmega328p/: gists.c  main.c  spi.h
src/atmega32a/: main.c  spi.h  usart.c
src/lib/: common.h  i2c.c  i2c.h  spi.h  usart.c  usart.h
src/lib/hal/: i2c.c  usart.c
src/lib/sd/: sd-type.h  sd.c  sd.h
